name:                s3ssu
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neezer/s3ssu#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Sherwood
maintainer:          evan@sherwood.io
copyright:           2017
category:            command line tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aws
                     , cmdargs
                     , unix
                     , http-conduit
                     , directory-tree
                     , text
  default-language:    Haskell2010

executable s3ssu
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , s3ssu
                     , cmdargs
  default-language:    Haskell2010

test-suite s3ssu-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , s3ssu
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/neezer/s3ssu
